docs: delete swagger schemas docs: add api tags
