# src/user/dto/signin.dto.ts
@@ -1,4 +1,3 @@
-import { ApiProperty } from '@nestjs/swagger';
 import { IsEmail, IsNotEmpty, IsString, Length } from 'class-validator';
 
 export class SignInDto {
@@ -6,12 +5,10 @@ export class SignInDto {
   @IsEmail()
   @IsNotEmpty()
   @Length(3, 100)
-  @ApiProperty({ description: "User's email address" })
   readonly email: string;
 
   @IsString()
   @IsNotEmpty()
   @Length(8, 100)
-  @ApiProperty({ description: "User's password" })
   readonly password: string;
 }
